--- a/styles/components/model.scss
+++ b/styles/components/model.scss
@@ -103,6 +103,19 @@ html.light {
     opacity: 0.75;
     transition: ease-in-out 0.35s;
   }
+  .title {
+    // z-index: 3;
+    // transform: translateY(1rem);
+    font-size: 6rem;
+    font-weight: 600;
+    margin: 0;
+    padding: 0;
+    color: white;
+    position: fixed;
+    text-align: center;
+    position: absolute;
+    transition: ease-in-out 0.45s;
+  }
   @media only screen and (max-width: 850px) {
     .model-view {
       height: 15rem;
