--- a/styles/components/navbar.scss
+++ b/styles/components/navbar.scss
@@ -102,6 +102,7 @@ html.dark {
 
 html.light {
   .nav-links {
+    display: inline;
     font-weight: 500;
     text-decoration: none;
     font-size: 1.2rem;
