--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -256,6 +256,7 @@ html {
 //     min-width: 416px;
 //   }
 // }
+
 @media only screen and (max-width: 900px) {
   .contain-skill {
     justify-content: flex-start;
@@ -270,6 +271,19 @@ html {
   }
   .wrapper-skills-page {
     max-width: 416px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .skills {
+    margin-top: 2%;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .wrapper-skills-page {
+    min-width: 100px;
+  }
+  .exp-card {
+    min-width: 100px;
   }
 }
 .contain-exp {
