--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,6 @@
 @import "styles/scss-variables.scss";
 * {
-  font-family: "inter", Geneva, Tahoma, sans-serif;
+  font-family: "inter", Verdana, Tahoma, sans-serif;
   padding: 0;
   margin: 0;
 }
